# tracing_server

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  vcpkg-configuration.json  vcpkg.json
source/: .server.cpp.swp  CMakeLists.txt  Main.cpp  databaseAPI.hpp  server.cpp
source/bcrypt/: CMakeLists.txt
source/database/: CMakeLists.txt
source/include/: DatabaseHandler.hpp  ServerHandler.hpp  jsonParser.hpp  jsonValidator.hpp
source/include/schemas/: login_request_schema.json  register_request_shema.json
source/json/: CMakeLists.txt
source/server/: CMakeLists.txt  ServerHandler.cpp
