cmake_minimum_required(VERSION 3.8.0)
project (TraceProject)

set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

find_package(nlohmann_json 3.2.0 REQUIRED)
find_package(restinio REQUIRED)
find_package(fmt CONFIG REQUIRED)
find_package(mongocxx REQUIRED)
find_package(bsoncxx REQUIRED)
include_directories(${LIBMONGOCXX_INCLUDE_DIR})
include_directories(${LIBBSONCXX_INCLUDE_DIR})
include_directories("/home/egor/project/build/vcpkg_installed/x64-linux/include/mongocxx/v_noabi")
include_directories("/home/egor/project/build/vcpkg_installed/x64-linux/include/bsoncxx/v_noabi")
include_directories("/home/egor/project/build/vcpkg_installed/x64-linux/include/libmongoc-1.0")
include_directories("/home/egor/project/build/vcpkg_installed/x64-linux/include/libbson-1.0")
include_directories("/home/egor/project/build/vcpkg_installed/x64-linux/lib")

add_subdirectory(source)
